[package]
name = "tlhelp32"
version = "1.0.2"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
description = "A small wrapper around the tlhelp32 windows API"
edition = "2018"
license = "MIT"
repository = "https://github.com/Veykril/tlhelp32"
readme = "README.md"
keywords = ["windows", "winapi", "tlhelp32", "ffi"]
categories = ["os::windows-apis"]

[dependencies]
widestring = "^0.4"

[dependencies.winapi]
version = "^0.3.6"
features = ["handleapi", "tlhelp32"]
